# agentseek

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  README.zh.md  mkdocs.yml  pyproject.toml
.github/workflows/: main.yml  on-release-cli.yml  on-release-main.yml
docs/: docs.md  docs.zh.md  hooks.py  index.md  index.zh.md
docs/_data/: hub.yml
docs/blog/: index.md  index.zh.md  introducing-agentseek.md  introducing-agentseek.zh.md
docs/explanation/: bub-relationship.md  bub-relationship.zh.md  extension-model.md  extension-model.zh.md  index.md  index.zh.md  langchain-relationship.md  langchain-relationship.zh.md  runtime-data-model.md  runtime-data-model.zh.md  what-agentseek-is.md  what-agentseek-is.zh.md  where-things-live.md  where-things-live.zh.md
docs/guides/: choose-template.md  choose-template.zh.md  create-project.md  create-project.zh.md  create-template.md  create-template.zh.md  index.md  index.zh.md  inspect-project.md  inspect-project.zh.md  local-execution-modes.md  local-execution-modes.zh.md  observability-tracing.md  run-project-tasks.md  (+2 more)
examples/: README.md
templates/: CONTRIBUTING.md  index.json
templates/bub/contextseek/{{cookiecutter.project_slug}}/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
templates/bub/contextseek/{{cookiecutter.project_slug}}/.agentseek/: lifecycle.toml
templates/bub/contextseek/{{cookiecutter.project_slug}}/frontend/: .env.example  README.md  index.html  package.json  server.ts  tsconfig.json  vite.config.ts
templates/bub/contextseek/{{cookiecutter.project_slug}}/frontend/src/: App.tsx  main.tsx  style.css
templates/bub/contextseek/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  dev.py  seed.py  server.py
tests/: test_cli.py  test_docs_observability.py  test_github_workflows.py  test_skills.py
(+108 files in other folders)
